# XY-model

./: .gitignore  CMakeLists.txt  CMakePresets.json  bash_corri.sh  conanfile.txt  organize and run.sh
K_5.0/e_0.1/: submit_run
Output/: Energy.txt  Helicity_modulus1.txt  Helicity_modulus2.txt  Lattice_dir_fin.txt  Single_Magnetization.txt  Vortices.txt  trsb_magnetization.txt
Output/T_0.009/: Helicity_modulus2.txt  Single_Magnetization.txt  Spin_1_dir_fin.txt
Output/T_0.01/: Helicity_modulus1.txt  Helicity_modulus2.txt  Lattice_dir_init.txt  Single_Magnetization.txt
Output/T_0.02/: Helicity_modulus1.txt  Lattice_dir_init.txt  Single_Magnetization.txt
Output/T_0.03/: Energy.txt  Helicity_modulus1.txt  Magnetization2.txt  Single_Magnetization.txt
Output/T_0.05/: Helicity_modulus1.txt  Helicity_modulus2.txt  Lattice_dir_init.txt  Single_Magnetization.txt
Output/T_0.07/: Energy.txt  Helicity_modulus1.txt  Single_Magnetization.txt
Output/T_0.08/: Energy.txt  Helicity_modulus2.txt  Single_Magnetization.txt
Output/T_0.09/: Energy.txt  Helicity_modulus1.txt  Lattice_dir_init.txt
Output/T_0.1/: Energy.txt  Helicity_modulus1.txt  Helicity_modulus2.txt  Single_Magnetization.txt
Output/T_0.11/: Helicity_modulus1.txt  Helicity_modulus2.txt  Lattice_dir_init.txt
Output/T_0.13/: Energy.txt  Helicity_modulus1.txt  Magnetization1.txt
Output/T_0.14/: Helicity_modulus1.txt  Lattice_dir_fin.txt  Vortices2.txt
Output/T_0.15/: Energy.txt  Helicity_modulus1.txt  Helicity_modulus2.txt  Single_Magnetization.txt
Output/T_0.17/: Spin_2_dir_fin.txt
Output/T_0.2/: Energy.txt  Helicity_modulus1.txt  Helicity_modulus2.txt  Magnetization2.txt
Output/T_0.22/: Energy.txt  Helicity_modulus1.txt
Output/T_0.25/: Energy.txt  Helicity_modulus2.txt  Magnetization2.txt  Single_Magnetization.txt
Output/T_0.27/: Helicity_modulus1.txt  Helicity_modulus2.txt  Lattice_dir_fin.txt
Output/T_0.3/: Helicity_modulus1.txt  Helicity_modulus2.txt  Lattice_dir_fin.txt  Single_Magnetization.txt  Spin_2_dir_fin.txt
Output/T_0.32/: Helicity_modulus1.txt  Single_Magnetization.txt
Output/T_0.35/: Single_Magnetization.txt  trsb_magnetization.txt
Output/T_0.37/: Lattice_dir_fin.txt  Magnetization2.txt  Single_Magnetization.txt  Spin_2_dir_fin.txt
Output/T_0.4/: Antivortices1.txt  Energy.txt  Lattice_dir_fin.txt  trsb_magnetization.txt
Output/T_0.45/: Energy.txt  Single_Magnetization.txt  Spin_2_dir_fin.txt  trsb_magnetization.txt
Output/T_0.5/: Antivortices2.txt  Energy.txt  Helicity_modulus1.txt  (+3 more)
cmake/: PrintTargetProperties.cmake
data analysis/: Autocorrelation.py  BKT_linear_intersection.py  B_Energy.py  B_map.py  Binder cumulant.py  Binder_Cumulant.py  Binder_Cumulant_JK.py  Binder_Cumulant_beta.py  Cv_bootstrap.py  Dual_Stiffness.py  Energy.py  Energy_Thermalization.py  Helicity1.py  Histogram.py  Jackknife_superfluidity.py  Joseph_Energy.py  Js.py  Js_infinity.py  Js_vs_beta.py  Magnetization.py  Multiple_superfluidity.py  Rank.py  Single_Magn.py  Untitled-1.ipynb  allora2.py  binder_cum_jackknife.py  cumulant.py  da_cancellare.py  data_anal.py  data_anal_opt.py  energy_thermalization.py  error_bars_energy_magn.py  fL.py  finite size effect.py  helicity_sum.py  import numpy as np.py  intersection.py  mult_sup.py  mult_sup_noJK.py  multiple energies.py  (+9 more)
data_analysis/: BKT_linear_intersection.py  BKT_single_intersection.py  Energy.py  Helicity1.py  Jackknife_superfluidity.py  Z2 intersection.py  bbcb.py  bee.py  binder_cum_jackknife.py  cestpas.py  cumulant.py  dolphin_analysis.py  double component analysisi.py  log_bin.py  log_bin2.py  magn_double_comp.py  quiver p.py  specific heat.py
launch_script/: organize and run.sh  submit_run
source/: 02.h  initialization.cpp  initialization.h  main.cpp  main.h  measures.cpp  measures.h  montecarlo.cpp  montecarlo.h  o2.h  parallel_temp.cpp  parallel_temp.h  robust_filesystem.h
(+41824 files in other folders)
